<resources>
    <string name="app_name">10 Secounds: Talk to the world</string>
    <string name="name_hint">Enter Your Name :</string>
    <string name="message_hint">Write your message to the whole world.</string>
    <string name="pre_sign">By signing up you accept our laws.</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="email_hint">Enter your email :</string>
    <string name="password_hint">Enter password :</string>
</resources>