<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".input_data">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/user_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:src="@drawable/ten_seconds_user"
                android:background="@drawable/message_box"
                android:padding="2dp"/>

            <EditText
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:layout_marginRight="30dp"
                android:inputType="text"
                android:paddingLeft="10dp"/>

        </LinearLayout>

        <EditText
            android:id="@+id/user_message"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:hint="@string/message_hint"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/message_box"
            android:padding="20dp"/>

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>